[gd_scene load_steps=75 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BoardPiece.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/GameScene/TABLE.png" type="Texture" id=3]
[ext_resource path="res://Sounds/rock-destroy-6409.mp3" type="AudioStream" id=4]
[ext_resource path="res://Foguin.png" type="Texture" id=5]
[ext_resource path="res://Scripts/AIManager.gd" type="Script" id=6]
[ext_resource path="res://Sprites/GameScene/BGCOLOR.png" type="Texture" id=7]
[ext_resource path="res://Scenes/SceneManager.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 384, 64, 128 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 384, 64, 128 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GameScene" type="Node2D"]

[node name="Board" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 351, 120 )
script = ExtResource( 1 )

[node name="Bgcolor" type="Sprite" parent="Board"]
position = Vector2( 161.5, 179.75 )
scale = Vector2( 0.425417, 0.251458 )
texture = ExtResource( 7 )

[node name="Table" type="Sprite" parent="Board"]
position = Vector2( 153.313, 169.797 )
scale = Vector2( 0.290573, 0.257331 )
texture = ExtResource( 3 )

[node name="0,0" parent="Board" instance=ExtResource( 2 )]
position = Vector2( -53, -16 )

[node name="0,1" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 129, -19 )

[node name="0,2" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 311, -23 )

[node name="1,0" parent="Board" instance=ExtResource( 2 )]
position = Vector2( -60, 135 )

[node name="1,1" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 122, 143 )

[node name="1,2" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 315, 142 )

[node name="2,0" parent="Board" instance=ExtResource( 2 )]
position = Vector2( -73, 301 )

[node name="2,1" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 113, 304 )

[node name="2,2" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 301, 319 )

[node name="RockCollision" type="AudioStreamPlayer2D" parent="Board"]
position = Vector2( -351, -120 )
stream = ExtResource( 4 )

[node name="AIMANAGER" type="Node" parent="Board"]
script = ExtResource( 6 )

[node name="SceneManager" type="Node" parent="Board"]
script = ExtResource( 8 )

[node name="ColunaCentral" type="AnimatedSprite" parent="Board/SceneManager"]
visible = false
position = Vector2( 465, 266 )
scale = Vector2( 1, 4.30469 )
frames = SubResource( 33 )

[node name="ColunaDireita" type="AnimatedSprite" parent="Board/SceneManager"]
visible = false
position = Vector2( 651, 266 )
scale = Vector2( 1, 4.30469 )
frames = SubResource( 33 )

[node name="ColunaEsquerda" type="AnimatedSprite" parent="Board/SceneManager"]
visible = false
position = Vector2( 285, 265 )
scale = Vector2( 1, 4.30469 )
frames = SubResource( 33 )

[node name="LinhaCentral" type="AnimatedSprite" parent="Board/SceneManager"]
visible = false
position = Vector2( 470, 266 )
rotation = 1.5708
scale = Vector2( 1, 4.30469 )
frames = SubResource( 33 )

[node name="LinhaInferior" type="AnimatedSprite" parent="Board/SceneManager"]
visible = false
position = Vector2( 450, 429 )
rotation = 1.5708
scale = Vector2( 1, 4.30469 )
frames = SubResource( 33 )

[node name="LinhaSuperior" type="AnimatedSprite" parent="Board/SceneManager"]
visible = false
position = Vector2( 480, 110 )
scale = Vector2( 11.6406, 0.210938 )
frames = SubResource( 66 )

[node name="DiagonalDireita" type="AnimatedSprite" parent="Board/SceneManager"]
visible = false
position = Vector2( 471.895, 258.375 )
rotation = 0.872665
scale = Vector2( 1, 5.00343 )
frames = SubResource( 33 )

[node name="DiagonalEsquerda" type="AnimatedSprite" parent="Board/SceneManager"]
visible = false
position = Vector2( 470, 263 )
rotation = -0.872665
scale = Vector2( 1, 5.00343 )
frames = SubResource( 33 )
